Fixed some issues in responsiveness and overflow

--- a/public/css/style_about.css
+++ b/public/css/style_about.css
@@ -69,7 +69,7 @@ body {
   line-height: 1.5;
   min-height: 100vh;
   position: relative;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 .container {
